--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minetroller</title>
     <style>
-        /* Inline styles for simplicity */
+        /* General Styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #1e1e1e;
-            color: #f0f0f0;
+            background-color: #1b512d; /* Dark green background */
+            color: #d4edda; /* Light green text */
+            scroll-behavior: smooth;
         }
 
         header {
-            background: #2c2c2c;
+            background: #228b22; /* Forest green */
             padding: 20px;
             text-align: center;
+            border-bottom: 5px solid #145214; /* Slightly darker green border */
         }
 
         header img {
@@ -30,17 +32,26 @@
 
         nav a {
             text-decoration: none;
-            color: #61dafb;
+            color: #c7f0d8; /* Soft green */
             margin: 0 10px;
             font-size: 18px;
+            transition: color 0.3s ease-in-out;
+        }
+
+        nav a:hover {
+            color: #ffffff;
         }
 
         section {
             padding: 20px;
+            background-color: #206a40; /* Darker green for sections */
+            margin: 10px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
         }
 
         h1, h2 {
-            color: #61dafb;
+            color: #c7f0d8;
         }
 
         .libraries ul {
@@ -51,19 +62,29 @@
         .btn-primary {
             display: inline-block;
             margin-top: 20px;
-            padding: 10px 20px;
-            background: #61dafb;
-            color: #1e1e1e;
+            padding: 15px 25px;
+            color: #ffffff;
             text-decoration: none;
             font-weight: bold;
             border-radius: 5px;
+            background-image: url('https://imgur.com/lOdQIom.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            transition: transform 0.2s ease-in-out;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        }
+
+        .btn-primary:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.5);
         }
 
         footer {
-            background: #2c2c2c;
+            background: #145214; /* Dark green for footer */
             text-align: center;
             padding: 10px;
             margin-top: 20px;
+            color: #c7f0d8;
         }
     </style>
 </head>
