--- a/index.html
+++ b/index.html
@@ -87,6 +87,27 @@
             color: #c7f0d8;
         }
     </style>
+    <script>
+        // Smooth scroll with animation
+        document.addEventListener("DOMContentLoaded", () => {
+            const links = document.querySelectorAll("nav a");
+
+            links.forEach(link => {
+                link.addEventListener("click", event => {
+                    event.preventDefault();
+                    const targetId = link.getAttribute("href").substring(1);
+                    const targetElement = document.getElementById(targetId);
+
+                    if (targetElement) {
+                        window.scrollTo({
+                            top: targetElement.offsetTop,
+                            behavior: "smooth"
+                        });
+                    }
+                });
+            });
+        });
+    </script>
 </head>
 <body>
     <header>
