--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <section id="download">
         <h2>Download Minetroller</h2>
         <p>Download the latest version of Minetroller and get started today!</p>
-        <a href="https://raw.githubusercontent.com/Minetroller-Official/minetrollerfile/refs/heads/main/minetroller1-0.py" 
+        <a href="https://github.com/Minetroller-Official/minetroller" 
            class="btn-primary" 
            download>Download Minetroller</a>
     </section>
