--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minetroller</title>
+    <link rel="icon" href="https://imgur.com/hZCEjny" type="image/png">
     <style>
         /* General Styles */
         body {
@@ -162,7 +163,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Minetroller Team. All rights reserved.</p>
+        <p>&copy; 2024 Minetroller Team (Main Developer - Squiral201227). All rights reserved.</p>
     </footer>
 </body>
 </html>
